[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Background.png" type="Texture" id=1]
[ext_resource path="res://Buttons/Font/Arial Rounded Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://JoinServer/JoinServerControl.gd" type="Script" id=3]
[ext_resource path="res://JoinServer/Loading.tscn" type="PackedScene" id=4]
[ext_resource path="res://JoinServer/Message.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 132
font_data = ExtResource( 2 )

[node name="JoinServerControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.5
margin_top = -79.5
margin_right = 276.5
margin_bottom = 79.5
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
shortcut_in_tooltip = false
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneTween" type="Tween" parent="."]

[node name="ConnectingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Loading" parent="." instance=ExtResource( 4 )]

[node name="Message" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="tween_all_completed" from="ChangeSceneTween" to="." method="_on_ChangeSceneTween_tween_all_completed"]
[connection signal="timeout" from="ConnectingTimer" to="." method="_on_ConnectingTimer_timeout"]
